# rust-tutorial

./: Cargo.toml  README.md
adder/src/: lib.rs
adder/tests/common/: mod.rs
advanced_features/src/: lib.rs  main.rs
blog/src/: lib.rs
cargo-crates/: Cargo.toml
common_collections/src/: main.rs
common_collections_exercices/: Cargo.toml
common_collections_exercices/src/: main.rs
enums/src/: main.rs
error-handling/src/: main.rs
generics/src/: lib.rs  main.rs
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
iterators_closure/: Cargo.toml
iterators_closure/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
oop/src/: lib.rs
ownership/src/: main.rs
pattern_matching/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs  main.rs
restaurant/src/front_of_house/: hosting.rs
smart_pointers/src/: lib.rs  main.rs
structs/src/: main.rs
threads/src/: main.rs
variables/src/: main.rs
