[workspace]
members = [
    "hello_world",
    "guessing_game",
    "variables",
    "ownership",
    "structs",
    "rectangles",
    "enums",
    "restaurant",
    "common_collections",
    "common_collections_exercices",
    "error-handling",
    "generics",
    "adder",
    "minigrep",
    "iterators_closure",
    "cargo-crates",
    "smart_pointers"
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
